# nonebot-plugin-tempfile

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
nonebot_plugin_tempfile/: __init__.py  config.py
